added confirmation step from the one who created before completing the transaction

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11,6 +11,10 @@ body {
   background-color: #f7fafc;
 }
 
+.jumbo{
+  height: 300px;
+}
+
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
 
 .bg-flat-color-1 {
